--- a/.stylelintrc
+++ b/.stylelintrc
@@ -7,8 +7,11 @@
   ],
   "syntax": "scss",
   "rules": {
+    "block-opening-brace-space-after": null,
+    "block-closing-brace-space-before": null,
     "color-hex-case": "upper",
     "color-hex-length": "long",
+    "declaration-block-single-line-max-declarations": 8,
     "selector-list-comma-newline-after": "never-multi-line",
     "selector-pseudo-element-colon-notation": "single",
     "selector-max-universal": 0,
