--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.18.9",
     "stylelint": "^9.9.0",
