--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-emotion-starter",
-  "version": "0.0.1",
-  "description": "a starter for projects using React & Emotion",
+  "name": "lt4w",
+  "version": "1.0.0",
+  "description": "a website for Lymphatic Dynamics",
   "main": "index.js",
   "scripts": {
     "build": "NODE_ENV=production webpack-cli --config ./webpack.config.js",
@@ -11,61 +11,72 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/EvanMorrison/react-emotion-starter.git"
+    "url": "git+https://github.com/EvanMorrison/lt4w-react-markdown.git"
   },
   "keywords": [
-    "starter",
     "react",
-    "emotion"
+    "emotion",
+    "lymphatic",
+    "therapy"
   ],
   "author": "Evan Morrison",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/EvanMorrison/react-emotion-starter/issues"
+    "url": "https://github.com/EvanMorrison/lt4w-react-markdown/issues"
   },
-  "homepage": "https://github.com/EvanMorrison/react-emotion-starter#readme",
+  "homepage": "https://github.com/EvanMorrison/lt4w-react-markdown#readme",
   "dependencies": {
-    "@babel/polyfill": "^7.2.5",
-    "@emotion/babel-preset-css-prop": "^10.0.5",
-    "@emotion/core": "^10.0.5",
-    "@emotion/styled": "^10.0.5",
-    "prop-types": "^15.6.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-hot-loader": "^4.6.3",
-    "react-router-dom": "^4.3.1"
+    "@babel/polyfill": "^7.4.4",
+    "@emotion/core": "^10.0.15",
+    "@emotion/styled": "^10.0.15",
+    "@rmwc/button": "^3.0.9",
+    "@rmwc/textfield": "^3.0.9",
+    "emotion-theming": "^10.0.14",
+    "moment": "^2.24.0",
+    "polished": "^2.3.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-hot-loader": "^4.3.12",
+    "react-markdown": "^4.0.3",
+    "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.2.3",
-    "@babel/preset-env": "^7.2.3",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
-    "clean-webpack-plugin": "^1.0.0",
-    "eslint": "^5.11.0",
+    "@emotion/babel-preset-css-prop": "^10.0.14",
+    "app-manifest-loader": "^2.4.0",
+    "babel-eslint": "^10.0.2",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^0.1.19",
+    "eslint": "^6.1.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.1",
-    "eslint-plugin-emotion": "^10.0.0",
+    "eslint-plugin-emotion": "^10.0.14",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "eslint-plugin-standard": "^4.0.0",
-    "file-loader": "^3.0.1",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "nodemon": "^1.18.9",
-    "stylelint": "^9.9.0",
+    "nodemon": "^1.18.5",
+    "raw-loader": "^0.5.1",
+    "stylelint": "^9.7.1",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-custom-processor-loader": "^0.6.0",
-    "stylelint-processor-styled-components": "^1.5.1",
-    "webpack": "^4.28.2",
+    "stylelint-custom-processor-loader": "^0.5.0",
+    "stylelint-processor-styled-components": "^1.5.0",
+    "webpack": "^4.24.0",
     "webpack-bundle-analyzer": "^3.0.3",
-    "webpack-cdn-plugin": "^2.3.3",
+    "webpack-cdn-plugin": "^2.2.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.1.10"
   }
 }
