--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a website for Dynamic Lymphatics",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV=production webpack-cli --config ./webpack.config.js",
+    "build": "NODE_ENV=production webpack-cli --config ./webpack.config.js && cp _redirects dist/_redirects",
     "performance": "NODE_ENV=performance webpack --config ./webpack.config.js",
     "start": "NODE_ENV=development webpack-dev-server --config ./webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
